@@ -1,3 +1,8 @@
+2010-06-29  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* shptree.c: fix sign of Z and M comparisons in SHPCheckObjectContained.
+	(http://bugzilla.maptools.org/show_bug.cgi?id=2223)
+
 2010-01-28  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* shpopen.c/shapefil.h: Handle the .shp file length limits more 
